# open-T-DATA

./: Cargo.toml  README.md  conda-packages.txt  main.py  pip-packages.txt  requirements.txt  test-H2LooP.kdev4
artifact/: ADXL313.json  ais328dq.json
ingest/: processed.json
ingest/datasheets/: summary.json
output/: generated_driver_code.json
src/: main.rs
